--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.4.1",
+    "tailwindcss": "^4.0.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
